css/styles.css
body{
    margin: 0 0 0 0;
    text-align: center;
    ;
}
h1{
    font-size: 500%;
    margin-top: 0 ;
    margin-bottom: 0;
    font-family: 'Dancing Script', cursive;
    color:#F5F1DA;
}
h2{
    
}

p{
    
    font-family: 'Cairo', sans-serif;
    position: relative;
    
}

hr{
    border-top: dotted ;
    border-width: 5px;
    width: 40%;

}


.top-cloud{
    position: relative;
    left:260px;
    padding-top: 10px;
}
.bottom-cloud{
    position: absolute;
}

.top{
    /*
    border-width:  10px 10px 10px 10px;
    border-style: solid;
    border: solid 10px;
    */
    padding: 20px;
    background-color: #E5B299
}

.middle-container{

}
.bottom-container{

}

.picture{
    height: 200px;
    width: 200px;
}

#programmer{
    color:#F8EFD4;
    font-size: 2.5rem;
    font-weight: normal;
    font-family: 'Cairo', sans-serif;
    margin-top: 0;
    position: relative;
    left: 60px;
}

